config("fmt_config") {
  include_dirs = [ "." ]
}

source_set("fmt") {
  sources = [
    "fmt/container.h",
    "fmt/format.cc",
    "fmt/format.h",
    "fmt/ostream.cc",
    "fmt/ostream.h",
    "fmt/printf.cc",
    "fmt/printf.h",
    "fmt/string.h",
    "fmt/time.h",
  ]

  if (is_posix) {
    sources += [
      "fmt/posix.cc",
      "fmt/posix.h",
    ]
  }

  public_configs = [ ":fmt_config" ]
}
