config("fmt_config") {
  include_dirs = [ "include" ]
}

source_set("fmt") {
  public = [
    "include/fmt/chrono.h",
    "include/fmt/color.h",
    "include/fmt/core.h",
    "include/fmt/format.h",
    "include/fmt/format-inl.h",
    "include/fmt/locale.h",
    "include/fmt/ostream.h",
    "include/fmt/printf.h",
    "include/fmt/time.h",
    "include/fmt/ranges.h",
    "include/fmt/posix.h",
  ]

  sources = [
    "src/format.cc",
    "src/posix.cc",
  ]

  public_configs = [ ":fmt_config" ]
}
